Apply Google Java Format AOSP style