@@ -1,16 +1,14 @@
 /**
  * Copyright (C) 2015 The Gravitee team (http://gravitee.io)
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
+ * <p>Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file
+ * except in compliance with the License. You may obtain a copy of the License at
  *
- *         http://www.apache.org/licenses/LICENSE-2.0
+ * <p>http://www.apache.org/licenses/LICENSE-2.0
  *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
+ * <p>Unless required by applicable law or agreed to in writing, software distributed under the
+ * License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
+ * express or implied. See the License for the specific language governing permissions and
  * limitations under the License.
  */
 package io.gravitee.am.management.service;
@@ -24,6 +22,7 @@ import io.gravitee.am.service.*;
 import io.gravitee.am.service.exception.InvalidUserException;
 import io.reactivex.Flowable;
 import io.reactivex.Single;
+
 import org.springframework.stereotype.Component;
 import org.springframework.util.StringUtils;
 
@@ -47,12 +46,13 @@ public class PermissionService {
     private final ApplicationService applicationService;
     private final Map<String, Boolean> consistencyCache;
 
-    public PermissionService(MembershipService membershipService,
-                             GroupService groupService,
-                             RoleService roleService,
-                             EnvironmentService environmentService,
-                             DomainService domainService,
-                             ApplicationService applicationService) {
+    public PermissionService(
+            MembershipService membershipService,
+            GroupService groupService,
+            RoleService roleService,
+            EnvironmentService environmentService,
+            DomainService domainService,
+            ApplicationService applicationService) {
         this.membershipService = membershipService;
         this.groupService = groupService;
         this.roleService = roleService;
@@ -62,51 +62,67 @@ public class PermissionService {
         this.consistencyCache = new ConcurrentHashMap<>();
     }
 
-    public Single<Map<Permission, Set<Acl>>> findAllPermissions(User user, ReferenceType referenceType, String referenceId) {
+    public Single<Map<Permission, Set<Acl>>> findAllPermissions(
+            User user, ReferenceType referenceType, String referenceId) {
 
-        return findMembershipPermissions(user, Collections.singletonMap(referenceType, referenceId).entrySet().stream())
+        return findMembershipPermissions(
+                        user,
+                        Collections.singletonMap(referenceType, referenceId).entrySet().stream())
                 .map(this::aclsPerPermission);
     }
 
     public Single<Boolean> hasPermission(User user, PermissionAcls permissions) {
 
         return haveConsistentReferenceIds(permissions)
-                .flatMap(consistent -> {
-                    if (consistent) {
-                        return findMembershipPermissions(user, permissions.referenceStream())
-                                .map(permissions::match);
-                    }
-                    return Single.just(false);
-                });
+                .flatMap(
+                        consistent -> {
+                            if (consistent) {
+                                return findMembershipPermissions(
+                                                user, permissions.referenceStream())
+                                        .map(permissions::match);
+                            }
+                            return Single.just(false);
+                        });
     }
 
     protected Single<Boolean> haveConsistentReferenceIds(PermissionAcls permissionAcls) {
 
         try {
-            Map<ReferenceType, String> referenceMap = permissionAcls.referenceStream().collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
+            Map<ReferenceType, String> referenceMap =
+                    permissionAcls
+                            .referenceStream()
+                            .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
 
             if (referenceMap.size() == 1) {
                 // There is only one type. Consistency is ok.
                 return Single.just(true);
             }
 
-            // When checking acls for multiple types in same time, we need to check if tuples [ReferenceType - ReferenceId] are consistent each other.
-            // Ex: when we check for DOMAIN_READ permission on domain X or DOMAIN_READ environment Y, we need to make sure that domain X is effectively attached to domain Y and grand permission by inheritance.
+            // When checking acls for multiple types in same time, we need to check if tuples
+            // [ReferenceType - ReferenceId] are consistent each other.
+            // Ex: when we check for DOMAIN_READ permission on domain X or DOMAIN_READ environment
+            // Y, we need to make sure that domain X is effectively attached to domain Y and grand
+            // permission by inheritance.
             String applicationId = referenceMap.get(ReferenceType.APPLICATION);
             String domainId = referenceMap.get(ReferenceType.DOMAIN);
             String environmentId = referenceMap.get(ReferenceType.ENVIRONMENT);
             String organizationId = referenceMap.get(ReferenceType.ORGANIZATION);
 
-            String key = StringUtils.arrayToDelimitedString(new String[]{applicationId, domainId, environmentId, organizationId}, "#");
+            String key =
+                    StringUtils.arrayToDelimitedString(
+                            new String[] {applicationId, domainId, environmentId, organizationId},
+                            "#");
 
-            if(consistencyCache.containsKey(key)) {
+            if (consistencyCache.containsKey(key)) {
                 return Single.just(consistencyCache.get(key));
             }
 
             List<Single<Boolean>> obs = new ArrayList<>();
 
             if (applicationId != null) {
-                obs.add(isApplicationIdConsistent(applicationId, domainId, environmentId, organizationId));
+                obs.add(
+                        isApplicationIdConsistent(
+                                applicationId, domainId, environmentId, organizationId));
             }
 
             if (domainId != null) {
@@ -121,43 +137,56 @@ public class PermissionService {
                     .all(consistent -> consistent)
                     .onErrorResumeNext(Single.just(false))
                     .doOnSuccess(consistent -> consistencyCache.put(key, consistent));
-        } catch (Exception e){
+        } catch (Exception e) {
             return Single.just(false);
         }
     }
 
-    private Single<Boolean> isApplicationIdConsistent(String applicationId, String domainId, String environmentId, String organizationId) {
+    private Single<Boolean> isApplicationIdConsistent(
+            String applicationId, String domainId, String environmentId, String organizationId) {
 
-        if(domainId == null && environmentId == null && organizationId == null) {
+        if (domainId == null && environmentId == null && organizationId == null) {
             return Single.just(true);
         }
 
-        return applicationService.findById(applicationId)
-                .flatMapSingle(application -> {
-                    if (domainId != null) {
-                        return Single.just(application.getDomain().equals(domainId));
-                    } else {
-                        // Need to fetch the domain to check if it belongs to the environment / organization.
-                        return isDomainIdConsistent(application.getDomain(), environmentId, organizationId);
-                    }
-                });
+        return applicationService
+                .findById(applicationId)
+                .flatMapSingle(
+                        application -> {
+                            if (domainId != null) {
+                                return Single.just(application.getDomain().equals(domainId));
+                            } else {
+                                // Need to fetch the domain to check if it belongs to the
+                                // environment / organization.
+                                return isDomainIdConsistent(
+                                        application.getDomain(), environmentId, organizationId);
+                            }
+                        });
     }
 
-    private Single<Boolean> isDomainIdConsistent(String domainId, String environmentId, String organizationId) {
+    private Single<Boolean> isDomainIdConsistent(
+            String domainId, String environmentId, String organizationId) {
 
-        if(environmentId == null && organizationId == null) {
+        if (environmentId == null && organizationId == null) {
             return Single.just(true);
         }
 
-        return domainService.findById(domainId)
-                .flatMapSingle(domain -> {
-                    if (environmentId != null) {
-                        return Single.just(domain.getReferenceId().equals(environmentId) && domain.getReferenceType() == ReferenceType.ENVIRONMENT);
-                    } else {
-                        // Need to fetch the environment to check if it belongs to the organization.
-                        return isEnvironmentIdConsistent(domain.getReferenceId(), organizationId);
-                    }
-                });
+        return domainService
+                .findById(domainId)
+                .flatMapSingle(
+                        domain -> {
+                            if (environmentId != null) {
+                                return Single.just(
+                                        domain.getReferenceId().equals(environmentId)
+                                                && domain.getReferenceType()
+                                                        == ReferenceType.ENVIRONMENT);
+                            } else {
+                                // Need to fetch the environment to check if it belongs to the
+                                // organization.
+                                return isEnvironmentIdConsistent(
+                                        domain.getReferenceId(), organizationId);
+                            }
+                        });
     }
 
     private Single<Boolean> isEnvironmentIdConsistent(String environmentId, String organizationId) {
@@ -166,81 +195,117 @@ public class PermissionService {
             return Single.just(true);
         }
 
-        return environmentService.findById(environmentId, organizationId)
+        return environmentService
+                .findById(environmentId, organizationId)
                 .map(environment -> true)
                 .onErrorResumeNext(Single.just(false));
     }
 
-    private Single<Map<Membership, Map<Permission, Set<Acl>>>> findMembershipPermissions(User user, Stream<Map.Entry<ReferenceType, String>> referenceStream) {
+    private Single<Map<Membership, Map<Permission, Set<Acl>>>> findMembershipPermissions(
+            User user, Stream<Map.Entry<ReferenceType, String>> referenceStream) {
 
         if (user.getId() == null) {
             return Single.error(new InvalidUserException("Specified user is invalid"));
         }
 
-        return groupService.findByMember(user.getId())
+        return groupService
+                .findByMember(user.getId())
                 .map(Group::getId)
                 .toList()
-                .flatMap(userGroupIds -> {
-                    MembershipCriteria criteria = new MembershipCriteria();
-                    criteria.setUserId(user.getId());
-                    criteria.setGroupIds(userGroupIds.isEmpty() ? null : userGroupIds);
-                    criteria.setLogicalOR(true);
+                .flatMap(
+                        userGroupIds -> {
+                            MembershipCriteria criteria = new MembershipCriteria();
+                            criteria.setUserId(user.getId());
+                            criteria.setGroupIds(userGroupIds.isEmpty() ? null : userGroupIds);
+                            criteria.setLogicalOR(true);
 
-                    // Get all user and group memberships.
-                    return Flowable.merge(referenceStream.map(p -> membershipService.findByCriteria(p.getKey(), p.getValue(), criteria)).collect(Collectors.toList()))
-                            .toList()
-                            .flatMap(allMemberships -> {
+                            // Get all user and group memberships.
+                            return Flowable.merge(
+                                            referenceStream
+                                                    .map(
+                                                            p ->
+                                                                    membershipService
+                                                                            .findByCriteria(
+                                                                                    p.getKey(),
+                                                                                    p.getValue(),
+                                                                                    criteria))
+                                                    .collect(Collectors.toList()))
+                                    .toList()
+                                    .flatMap(
+                                            allMemberships -> {
+                                                if (allMemberships.isEmpty()) {
+                                                    return Single.just(Collections.emptyMap());
+                                                }
 
-                                if (allMemberships.isEmpty()) {
-                                    return Single.just(Collections.emptyMap());
-                                }
-
-                                // Get all roles.
-                                return roleService.findByIdIn(allMemberships.stream().map(Membership::getRoleId).collect(Collectors.toList()))
-                                        .map(allRoles -> permissionsPerMembership(allMemberships, allRoles));
-                            });
-                });
+                                                // Get all roles.
+                                                return roleService
+                                                        .findByIdIn(
+                                                                allMemberships.stream()
+                                                                        .map(Membership::getRoleId)
+                                                                        .collect(
+                                                                                Collectors
+                                                                                        .toList()))
+                                                        .map(
+                                                                allRoles ->
+                                                                        permissionsPerMembership(
+                                                                                allMemberships,
+                                                                                allRoles));
+                                            });
+                        });
     }
 
-    private Map<Membership, Map<Permission, Set<Acl>>> permissionsPerMembership(List<Membership> allMemberships, Set<Role> allRoles) {
+    private Map<Membership, Map<Permission, Set<Acl>>> permissionsPerMembership(
+            List<Membership> allMemberships, Set<Role> allRoles) {
 
-        Map<String, Role> allRolesById = allRoles.stream().collect(Collectors.toMap(Role::getId, role -> role));
-        Map<Membership, Map<Permission, Set<Acl>>> rolesPerMembership = allMemberships.stream().collect(Collectors.toMap(membership -> membership, o -> new HashMap<>()));
+        Map<String, Role> allRolesById =
+                allRoles.stream().collect(Collectors.toMap(Role::getId, role -> role));
+        Map<Membership, Map<Permission, Set<Acl>>> rolesPerMembership =
+                allMemberships.stream()
+                        .collect(Collectors.toMap(membership -> membership, o -> new HashMap<>()));
 
-        rolesPerMembership.forEach((membership, permissions) -> {
-            Role role = allRolesById.get(membership.getRoleId());
+        rolesPerMembership.forEach(
+                (membership, permissions) -> {
+                    Role role = allRolesById.get(membership.getRoleId());
 
-            // Need to check the membership role is well assigned (ie: the role is assignable with the membership type).
-            if (role != null && role.getAssignableType() == membership.getReferenceType()) {
-                Map<Permission, Set<Acl>> rolePermissions = role.getPermissionAcls();
+                    // Need to check the membership role is well assigned (ie: the role is
+                    // assignable with the membership type).
+                    if (role != null && role.getAssignableType() == membership.getReferenceType()) {
+                        Map<Permission, Set<Acl>> rolePermissions = role.getPermissionAcls();
 
-                // Compute membership permission acls.
-                rolePermissions.forEach((permission, acls) -> {
-                    permissions.merge(permission, acls, (acls1, acls2) -> {
-                        acls1.addAll(acls2);
-                        return acls1;
-                    });
+                        // Compute membership permission acls.
+                        rolePermissions.forEach(
+                                (permission, acls) -> {
+                                    permissions.merge(
+                                            permission,
+                                            acls,
+                                            (acls1, acls2) -> {
+                                                acls1.addAll(acls2);
+                                                return acls1;
+                                            });
+                                });
+                    }
                 });
-            }
-        });
 
         return rolesPerMembership;
     }
 
-    private Map<Permission, Set<Acl>> aclsPerPermission(Map<Membership, Map<Permission, Set<Acl>>> rolesPerMembership) {
+    private Map<Permission, Set<Acl>> aclsPerPermission(
+            Map<Membership, Map<Permission, Set<Acl>>> rolesPerMembership) {
 
         Map<Permission, Set<Acl>> permissions = new HashMap<>();
 
-        rolesPerMembership.forEach((membership, membershipPermissions) ->
-                membershipPermissions.forEach((permission, acls) -> {
+        rolesPerMembership.forEach(
+                (membership, membershipPermissions) ->
+                        membershipPermissions.forEach(
+                                (permission, acls) -> {
 
-                    // Compute acls of same Permission.
-                    if (permissions.containsKey(permission)) {
-                        permissions.get(permission).addAll(acls);
-                    } else {
-                        permissions.put(permission, new HashSet<>(acls));
-                    }
-                }));
+                                    // Compute acls of same Permission.
+                                    if (permissions.containsKey(permission)) {
+                                        permissions.get(permission).addAll(acls);
+                                    } else {
+                                        permissions.put(permission, new HashSet<>(acls));
+                                    }
+                                }));
 
         return permissions;
     }
