@@ -1,19 +1,23 @@
 /**
  * Copyright (C) 2015 The Gravitee team (http://gravitee.io)
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
+ * <p>Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file
+ * except in compliance with the License. You may obtain a copy of the License at
  *
- *         http://www.apache.org/licenses/LICENSE-2.0
+ * <p>http://www.apache.org/licenses/LICENSE-2.0
  *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
+ * <p>Unless required by applicable law or agreed to in writing, software distributed under the
+ * License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
+ * express or implied. See the License for the specific language governing permissions and
  * limitations under the License.
  */
 package io.gravitee.am.repository.jdbc.management.api;
+
+import static org.springframework.data.relational.core.query.Criteria.where;
+import static org.springframework.data.relational.core.query.Query.query;
+
+import static reactor.adapter.rxjava.RxJava2Adapter.fluxToFlowable;
+import static reactor.adapter.rxjava.RxJava2Adapter.monoToSingle;
 
 import io.gravitee.am.common.utils.RandomString;
 import io.gravitee.am.model.common.Page;
@@ -26,6 +30,7 @@ import io.reactivex.Completable;
 import io.reactivex.Flowable;
 import io.reactivex.Maybe;
 import io.reactivex.Single;
+
 import org.springframework.beans.factory.InitializingBean;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.PageRequest;
@@ -41,20 +46,15 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
-import static org.springframework.data.relational.core.query.Criteria.where;
-import static org.springframework.data.relational.core.query.Query.query;
-import static reactor.adapter.rxjava.RxJava2Adapter.fluxToFlowable;
-import static reactor.adapter.rxjava.RxJava2Adapter.monoToSingle;
-
 /**
  * @author Eric LELEU (eric.leleu at graviteesource.com)
  * @author GraviteeSource Team
  */
 @Repository
-public class JdbcAccessPolicyRepository extends AbstractJdbcRepository implements AccessPolicyRepository, InitializingBean {
+public class JdbcAccessPolicyRepository extends AbstractJdbcRepository
+        implements AccessPolicyRepository, InitializingBean {
 
-    @Autowired
-    protected SpringAccessPolicyRepository accessPolicyRepository;
+    @Autowired protected SpringAccessPolicyRepository accessPolicyRepository;
 
     protected AccessPolicy toAccessPolicy(JdbcAccessPolicy entity) {
         return mapper.map(entity, AccessPolicy.class);
@@ -72,16 +72,19 @@ public class JdbcAccessPolicyRepository extends AbstractJdbcRepository implement
     public static final String COL_CREATED_AT = "created_at";
     public static final String COL_UPDATED_AT = "updated_at";
 
-    private static List<String> columns = List.of(COL_ID,COL_TYPE,
-            COL_ENABLED,
-            COL_NAME,
-            COL_DESCRIPTION,
-            COL_ORDER,
-            COL_CONDITION,
-            COL_DOMAIN,
-            COL_RESOURCE,
-            COL_CREATED_AT,
-            COL_UPDATED_AT);
+    private static List<String> columns =
+            List.of(
+                    COL_ID,
+                    COL_TYPE,
+                    COL_ENABLED,
+                    COL_NAME,
+                    COL_DESCRIPTION,
+                    COL_ORDER,
+                    COL_CONDITION,
+                    COL_DOMAIN,
+                    COL_RESOURCE,
+                    COL_CREATED_AT,
+                    COL_UPDATED_AT);
 
     private String INSERT_STATEMENT;
 
@@ -93,20 +96,32 @@ public class JdbcAccessPolicyRepository extends AbstractJdbcRepository implement
     @Override
     public Single<Page<AccessPolicy>> findByDomain(String domain, int page, int size) {
         LOGGER.debug("findByDomain(domain:{}, page:{}, size:{})", domain, page, size);
-        return fluxToFlowable(template.select(JdbcAccessPolicy.class)
-                .matching(
-                        query(where(COL_DOMAIN).is(domain))
-                                .sort(Sort.by(Sort.Order.desc(COL_UPDATED_AT)))
-                                .with(PageRequest.of(page, size))).all()).toList()
-                .map(content -> content.stream().map(this::toAccessPolicy).collect(Collectors.toList()))
-                .flatMap(content -> accessPolicyRepository.countByDomain(domain)
-                        .map((count) -> new Page<>(content, page, count)));
+        return fluxToFlowable(
+                        template.select(JdbcAccessPolicy.class)
+                                .matching(
+                                        query(where(COL_DOMAIN).is(domain))
+                                                .sort(Sort.by(Sort.Order.desc(COL_UPDATED_AT)))
+                                                .with(PageRequest.of(page, size)))
+                                .all())
+                .toList()
+                .map(
+                        content ->
+                                content.stream()
+                                        .map(this::toAccessPolicy)
+                                        .collect(Collectors.toList()))
+                .flatMap(
+                        content ->
+                                accessPolicyRepository
+                                        .countByDomain(domain)
+                                        .map((count) -> new Page<>(content, page, count)));
     }
 
     @Override
     public Flowable<AccessPolicy> findByDomainAndResource(String domain, String resource) {
         LOGGER.debug("findByDomainAndResource(domain:{}, resources:{})", domain, resource);
-        return accessPolicyRepository.findByDomainAndResource(domain, resource).map(this::toAccessPolicy);
+        return accessPolicyRepository
+                .findByDomainAndResource(domain, resource)
+                .map(this::toAccessPolicy);
     }
 
     @Override
@@ -124,8 +139,7 @@ public class JdbcAccessPolicyRepository extends AbstractJdbcRepository implement
     @Override
     public Maybe<AccessPolicy> findById(String id) {
         LOGGER.debug("findById({})", id);
-        return accessPolicyRepository.findById(id)
-                .map(this::toAccessPolicy);
+        return accessPolicyRepository.findById(id).map(this::toAccessPolicy);
     }
 
     @Override
@@ -135,7 +149,12 @@ public class JdbcAccessPolicyRepository extends AbstractJdbcRepository implement
 
         DatabaseClient.GenericExecuteSpec sql = template.getDatabaseClient().sql(INSERT_STATEMENT);
         sql = addQuotedField(sql, COL_ID, item.getId(), String.class);
-        sql = addQuotedField(sql, COL_TYPE, item.getType() == null ? null : item.getType().name(), String.class);
+        sql =
+                addQuotedField(
+                        sql,
+                        COL_TYPE,
+                        item.getType() == null ? null : item.getType().name(),
+                        String.class);
         sql = addQuotedField(sql, COL_ENABLED, item.isEnabled(), Boolean.class);
         sql = addQuotedField(sql, COL_NAME, item.getName(), String.class);
         sql = addQuotedField(sql, COL_DESCRIPTION, item.getDescription(), String.class);
@@ -143,10 +162,21 @@ public class JdbcAccessPolicyRepository extends AbstractJdbcRepository implement
         sql = addQuotedField(sql, COL_CONDITION, item.getCondition(), String.class);
         sql = addQuotedField(sql, COL_DOMAIN, item.getDomain(), String.class);
         sql = addQuotedField(sql, COL_RESOURCE, item.getResource(), String.class);
-        sql = addQuotedField(sql, COL_CREATED_AT, dateConverter.convertTo(item.getCreatedAt(), null), LocalDateTime.class);
-        sql = addQuotedField(sql, COL_UPDATED_AT, dateConverter.convertTo(item.getUpdatedAt(), null), LocalDateTime.class);
+        sql =
+                addQuotedField(
+                        sql,
+                        COL_CREATED_AT,
+                        dateConverter.convertTo(item.getCreatedAt(), null),
+                        LocalDateTime.class);
+        sql =
+                addQuotedField(
+                        sql,
+                        COL_UPDATED_AT,
+                        dateConverter.convertTo(item.getUpdatedAt(), null),
+                        LocalDateTime.class);
 
-        return monoToSingle(sql.fetch().rowsUpdated()).flatMap((i) -> this.findById(item.getId()).toSingle());
+        return monoToSingle(sql.fetch().rowsUpdated())
+                .flatMap((i) -> this.findById(item.getId()).toSingle());
     }
 
     @Override
@@ -155,7 +185,11 @@ public class JdbcAccessPolicyRepository extends AbstractJdbcRepository implement
 
         Map<SqlIdentifier, Object> updateFields = new HashMap<>();
         updateFields = addQuotedField(updateFields, COL_ID, item.getId());
-        updateFields = addQuotedField(updateFields, COL_TYPE, item.getType() == null ? null : item.getType().name());
+        updateFields =
+                addQuotedField(
+                        updateFields,
+                        COL_TYPE,
+                        item.getType() == null ? null : item.getType().name());
         updateFields = addQuotedField(updateFields, COL_ENABLED, item.isEnabled());
         updateFields = addQuotedField(updateFields, COL_NAME, item.getName());
         updateFields = addQuotedField(updateFields, COL_DESCRIPTION, item.getDescription());
@@ -163,10 +197,22 @@ public class JdbcAccessPolicyRepository extends AbstractJdbcRepository implement
         updateFields = addQuotedField(updateFields, COL_CONDITION, item.getCondition());
         updateFields = addQuotedField(updateFields, COL_DOMAIN, item.getDomain());
         updateFields = addQuotedField(updateFields, COL_RESOURCE, item.getResource());
-        updateFields = addQuotedField(updateFields, COL_CREATED_AT, dateConverter.convertTo(item.getCreatedAt(), null));
-        updateFields = addQuotedField(updateFields, COL_UPDATED_AT, dateConverter.convertTo(item.getUpdatedAt(), null));
+        updateFields =
+                addQuotedField(
+                        updateFields,
+                        COL_CREATED_AT,
+                        dateConverter.convertTo(item.getCreatedAt(), null));
+        updateFields =
+                addQuotedField(
+                        updateFields,
+                        COL_UPDATED_AT,
+                        dateConverter.convertTo(item.getUpdatedAt(), null));
 
-        return monoToSingle(template.update(query(where(COL_ID).is(item.getId())), Update.from(updateFields), JdbcAccessPolicy.class))
+        return monoToSingle(
+                        template.update(
+                                query(where(COL_ID).is(item.getId())),
+                                Update.from(updateFields),
+                                JdbcAccessPolicy.class))
                 .flatMap(__ -> Single.defer(() -> this.findById(item.getId()).toSingle()));
     }
 
